Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObjObject.quorum
class Main
    action Main
        Object v
        Text t
        t:SetValue("text")
        v = cast(Object, t)
        Test(v)
    end

    action Test(Text var)
        if var:GetValue() = "text"
            output "passed"
        end
    end
end
