Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjTextObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        Text var
        var:SetValue("text")
        return var
    end
end